Update docs for swagger and add transaction api for client
